@@ -26,7 +26,7 @@ librts2_la_SOURCES = hoststring.cpp app.cpp block.cpp daemon.cpp device.cpp mult
 	connopentpl.cpp connford.cpp expression.cpp nan.c connbait.cpp \
 	teld.cpp camd.cpp sensord.cpp filterd.cpp focusd.cpp mirror.cpp dome.cpp cupola.cpp domeford.cpp phot.cpp rotad.cpp \
 	gem.cpp fork.cpp tgdrive.cpp \
-	clicupola.cpp cliwheel.cpp clifocuser.cpp slitazimuth.c 
+	clicupola.cpp cliwheel.cpp clifocuser.cpp slitazimuth.c connthorlabs.cpp
 
 librts2gpib_la_SOURCES = conngpib.cpp conngpibenet.cpp conngpibprologix.cpp conngpibserial.cpp
 
