@@ -10,7 +10,6 @@ rts2_filterd_ifw_SOURCES = ifw.cpp
 rts2_filterd_dummy_SOURCES = dummy.cpp
 
 rts2_filterd_fw102c_SOURCES = fw102c.cpp
-rts2_filterd_fw102c_LDFLAGS = -lrts2gpib @LIB_GPIB@
 
 if FLI
 bin_PROGRAMS += rts2-filterd-fli
