@@ -1,3 +1,6 @@
+2012-11-19
+ * ThorLabs FW102c driver updates, ConnThorLabs
+
 2012-11-14
  * insert command for selector/queues
  * image mode calculation
